src/app/components/article/article.component.css
a, a:focus{
  border: none;
  outline: none;
} 

a:link{
  text-decoration: none;
}

.mat-dialog-container {
  padding: 0;
  color: red;
}

.overflow-auto {
  overflow: auto;
}

.overflow-auto::-webkit-scrollbar {
  height: 3px;
  width: 3px;
}

.overflow-auto::-webkit-scrollbar-thumb {
  background-color: #FF1D00; /*scroll line color*/
  border-radius: 20px;
}

.overflow-auto::-webkit-scrollbar-track{
  background: #0000004a; /*scroll bg*/
}

.overflow-auto::-webkit-scrollbar-corner {
  background: #0000004a; /*scroll bg*/
}

.max-h-720x {
  max-height: 720px;
}

.user-avatar {
  max-width: 50px;
  width: 100%;
  height: 50px;
  background-image: url('./../../../assets/img/placeholder-avatar.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 100px;
}

.m-auto {
  margin: auto;
}

.m-t-10x {
  margin-top: 10px;
}

.m-b-20x {
  margin-bottom: 20px;
}

.m-b-0 {
  margin-bottom: 0;
}

.border-b {
  border-bottom: 1px solid #0000004a;
}

.max-w-240x {
  max-width: 240px;
}

.text-align-justify {
  text-align: justify !important;
}

.text-align-center {
  text-align: center;
}

.text-align-end {
  text-align: end;
}

.close-button {
  position: absolute;
  top: 5%;
  right: 10%;
  background-color: white;
  border-radius: 100px;
  transition: 0.2s ease-in-out;
  width: 30px;
  height: 30px;
  cursor: pointer;
}

.close-button:hover {
  background-color: rgba(255, 255, 255, 0.726);
}

.close-button mat-icon {
  font-size: 30px;
}

